Major refactor of the service structure, it now mostly uses the mediator pattern

--- a/OpenNetworkStatus/appsettings.Development.json
+++ b/OpenNetworkStatus/appsettings.Development.json
@@ -1,4 +1,13 @@
 {
+  "site": {
+    "name": "Network",
+    "cors": {
+      "origins": [
+        "localhost",
+        "127.0.0.1"
+      ]
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
