--- a/OpenNetworkStatus/OpenNetworkStatus.csproj
+++ b/OpenNetworkStatus/OpenNetworkStatus.csproj
@@ -18,6 +18,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+      <PackageReference Include="MediatR" Version="8.0.1" />
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.3" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.1.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3" />
@@ -27,6 +30,7 @@
       <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
       <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+      <PackageReference Include="System.Text.Json" Version="5.0.0-preview.2.20160.6" />
     </ItemGroup>
 
     <ItemGroup>
