--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.7'
 
 services:
   network_status:
-    build: .
+    build:
+      context: .
+      dockerfile: OpenNetworkStatus/Dockerfile
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:5001;
