--- a/OpenNetworkStatus/OpenNetworkStatus.csproj
+++ b/OpenNetworkStatus/OpenNetworkStatus.csproj
@@ -18,9 +18,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
       <PackageReference Include="MediatR" Version="8.0.1" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.3" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.1.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3" />
@@ -31,6 +31,7 @@
       <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
       <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
       <PackageReference Include="System.Text.Json" Version="5.0.0-preview.2.20160.6" />
+      <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="3.1.3" />
     </ItemGroup>
 
     <ItemGroup>
@@ -44,4 +45,13 @@
     </ItemGroup>
 
 
+    <ItemGroup>
+      <Folder Include="Services\Authentication\Resources\" />
+      <Folder Include="Services\Authentication\Commands\" />
+      <Folder Include="Services\Authentication\Handlers\" />
+      <Folder Include="Services\Authentication\Queries\" />
+      <Folder Include="Services\IncidentServices\Commands\" />
+      <Folder Include="Services\IncidentServices\Handlers\" />
+      <Folder Include="Services\IncidentServices\Queries\" />
+    </ItemGroup>
 </Project>
