changes to docker support

--- a/OpenNetworkStatus/appsettings.Development.json
+++ b/OpenNetworkStatus/appsettings.Development.json
@@ -14,14 +14,7 @@
       "tokenLifetimeMinutes": 60
     }
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
   "ConnectionStrings": {
-    "DatabaseContext": "Host=localhost;Port=54320;Database=status;Username=postgres;Password=password"
+    "DatabaseContext": "Host=database;Port=5432;Database=status;Username=status;Password=status"
   }
 }
