--- a/OpenNetworkStatus/appsettings.Development.json
+++ b/OpenNetworkStatus/appsettings.Development.json
@@ -14,7 +14,7 @@
       "tokenLifetimeMinutes": 60
     }
   },
-  "ConnectionStrings": {
-    "DatabaseContext": "Host=database;Port=5432;Database=status;Username=status;Password=status"
+  "connectionStrings": {
+    "default": "Host=database;Port=5432;Database=status;Username=status;Password=status"
   }
 }
