Fixes #1 by adding basic swagger support

--- a/OpenNetworkStatus/appsettings.Development.json
+++ b/OpenNetworkStatus/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "site": {
     "name": "Network",
+    "enableSwagger": true,
     "cors": {
       "origins": [
         "localhost",
@@ -15,6 +16,6 @@
     }
   },
   "connectionStrings": {
-    "default": "Host=database;Port=5432;Database=status;Username=status;Password=status"
+    "default": "Host=localhost;Port=54320;Database=status;Username=postgres;Password=password"
   }
 }
