--- a/OpenNetworkStatus/appsettings.json
+++ b/OpenNetworkStatus/appsettings.json
@@ -1,6 +1,7 @@
 {
   "site": {
     "name": "OpenNetworkStatus",
+    "enableSwagger": false,
     "cors": {
       "origins": [
         "localhost",
