--- a/OpenNetworkStatus/OpenNetworkStatus.csproj
+++ b/OpenNetworkStatus/OpenNetworkStatus.csproj
@@ -32,6 +32,7 @@
       <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
       <PackageReference Include="System.Text.Json" Version="5.0.0-preview.2.20160.6" />
       <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="3.1.3" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
     </ItemGroup>
 
     <ItemGroup>
