Dev settings for docker

--- a/OpenNetworkStatus/appsettings.Development.json
+++ b/OpenNetworkStatus/appsettings.Development.json
@@ -16,6 +16,6 @@
     }
   },
   "connectionStrings": {
-    "default": "Host=localhost;Port=54320;Database=status;Username=postgres;Password=password"
+    "default": "Host=database;Port=5432;Database=status;Username=status;Password=status"
   }
 }
