Added support for two columns for components

--- a/OpenNetworkStatus/appsettings.Development.json
+++ b/OpenNetworkStatus/appsettings.Development.json
@@ -2,6 +2,7 @@
   "site": {
     "name": "Network",
     "enableSwagger": true,
+    "twoColumns": false,
     "cors": {
       "origins": [
         "localhost",
