--- a/OpenNetworkStatus/appsettings.json
+++ b/OpenNetworkStatus/appsettings.json
@@ -2,6 +2,7 @@
   "site": {
     "name": "OpenNetworkStatus",
     "enableSwagger": false,
+    "twoColumns": false,
     "cors": {
       "origins": [
         "localhost",
