Match new layout options

--- a/OpenNetworkStatus/appsettings.json
+++ b/OpenNetworkStatus/appsettings.json
@@ -2,7 +2,9 @@
   "site": {
     "name": "OpenNetworkStatus",
     "enableSwagger": false,
-    "twoColumns": false,
+    "layout": {
+        "twoColumns": false
+    },
     "cors": {
       "origins": [
         "localhost",
